--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <a href="https://www.instagram.com/jibecai/"><i class="fa-brands fa-instagram"></i></a>
     <a href="https://www.linkedin.com/in/juan-jose-libedinsky/"><i class="fa-brands fa-linkedin"></i></a>
 </div>
-<a href="/images/Currículum Juan Jose Libedinsky.pdf" download class="btn btn2">Descargar CV</a>
+<a href="https://jibeeeee.github.io/mi-pagina-web/images/Curr%C3%ADculum%20Juan%20Jose%20Libedinsky.pdf" download class="btn btn2">Descargar CV</a>
             </div>
             <div class="contact-right">
 
