--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ function closemenu (){
      </script>
      
      <script>
-        const scriptURL = 'https://script.google.com/macros/s/AKfycbyB4C4iSJDQkb-viVmCJKc-lyVFv3z8k3PEEpl-qyZmO5DJE1jmEPXoFwOSRP0Oi8Bm-A/exec'
+        const scriptURL = 'https://drive.google.com/file/d/1rNYDQ1oEOEnEtay89zAbpwV8p0TPjwK4/view?usp=sharing'
         const form = document.forms['submit-to-google-sheet']
         const msg = document.getElementById("msg")
       
